[metadata]
name = querier
version = 0.0.5
author = sergi
author_email = sergi@ifisc.csic-uib.es
description = pymongo Wrapper
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
	pymongo == 3.11.2


[egg_info]
tag_build =
tag_date = 0


[flake8]
max-line-length = 88

[codespell]
ignore-regex = \$\w+
